--- a/docker-build/default.conf
+++ b/docker-build/default.conf
@@ -1,6 +1,6 @@
 server {
         ## Your website name goes here.
-        server_name wm.dev;
+        server_name yourdomain;
         ## Your only path reference.
         root /app/web;
         ## This should be in your http block and if it is, it's not needed here.
